lab-subsetting-and-descriptive-stats

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2444,6 +2444,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "invoice_amounts = orders.groupby(\"InvoiceNo\").amount_spent.sum().mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "480.7621873111783"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "invoice_amounts.mean()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2469,6 +2498,26 @@
    "source": [
     "# your answer here\n",
     "orders.UnitPrice.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "480.7621873111783"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "invoice_amounts.max()"
    ]
   },
   {
@@ -2501,7 +2550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2654,15 +2703,39 @@
        "4254       12557   Spain         145.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sp = orders[orders[\"Country\"] == \"Spain\"]\n",
+    "sp.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([12557, 17097, 12540, 12551, 12484, 12539, 12510, 12421, 12502,\n",
+       "       12462, 12507, 12541, 12547, 12597, 12545, 12596, 12354, 12417,\n",
+       "       12455, 12450, 12548, 12556, 12550, 12546, 12454, 12448, 12544,\n",
+       "       12538, 12445, 12442])"
+      ]
+     },
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# your answer here\n",
-    "spain = orders[orders[\"Country\"] == \"Spain\"]\n",
-    "spain.head()"
+    "spain = orders[orders[\"Country\"] == \"Spain\"].CustomerID.unique()\n",
+    "spain"
    ]
   },
   {
@@ -2694,7 +2767,7 @@
     "##There are as many customers as the number of different customers we have in our database. \n",
     "    #So, the first thing I do is to get the number of uniques and then add them all up. \n",
     "\n",
-    "unique = spain[\"CustomerID\"].unique()\n",
+    "unique = sp[\"CustomerID\"].unique()\n",
     "number_customers = len(unique)\n",
     "number_customers"
    ]
@@ -2716,7 +2789,7 @@
     }
    ],
    "source": [
-    "num = len(spain.value_counts(\"CustomerID\"))\n",
+    "num = len(sp.value_counts(\"CustomerID\"))\n",
     "num"
    ]
   },
@@ -3666,7 +3739,7 @@
    "source": [
     "# your answer here\n",
     "## I reuse the dataframe that I generated in exercise 4.0.0.5 that was called Spain and that contained all the orders that have been made in Spain\n",
-    "plt.hist(x=spain.amount_spent, bins=60, color='#0504aa', rwidth=0.85)\n",
+    "plt.hist(x=sp.amount_spent, bins=60, color='#0504aa', rwidth=0.85)\n",
     "\n",
     "plt.xlim(0, 500)\n",
     "plt.ylim(0, 2500)"
